update giao diện, thêm màn thay đổi profile

--- a/app/src/main/res/layout/activity_sign_in_actvity.xml
+++ b/app/src/main/res/layout/activity_sign_in_actvity.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.SignInActivity">
+    tools:context=".activities.SignInActivity"
+    android:background="@color/backgroundMain">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -14,7 +15,7 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_150sdp"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/top_background"
             app:layout_constraintTop_toTopOf="parent">
             <TextView
                 android:layout_width="wrap_content"
