--- a/app/src/main/res/layout/activity_sign_up_activty.xml
+++ b/app/src/main/res/layout/activity_sign_up_activty.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackground"
+    android:background="@color/backgroundMain"
     tools:context=".activities.SignUpActivty">
     <LinearLayout
         android:id="@+id/layoutHeader"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
         android:orientation="horizontal"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/top_background"
         android:paddingStart="@dimen/_8sdp"
         android:paddingEnd="@dimen/_8sdp"
         app:layout_constraintTop_toTopOf="parent">
