--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
-    tools:context=".activities.MainActivity">
+    tools:context=".activities.MainActivity"
+    android:background="@color/backgroundMain">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
+        android:layout_height="@dimen/_180sdp"
         android:id="@+id/layoutHeader"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/top_background"
         android:gravity="center"
         android:orientation="horizontal"
         android:paddingStart="@dimen/_8sdp"
@@ -19,33 +20,167 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            android:id="@+id/textAvt"
+            android:layout_width="@dimen/_60sdp"
+            android:layout_height="@dimen/_60sdp"
+            android:background="@drawable/background_meeting_invitation_user_icon"
+            android:fontFamily="@font/ubuntu_bold"
+            android:gravity="center"
+            android:includeFontPadding="false"
+            android:textAllCaps="true"
+            android:textColor="@color/colorPrimaryText"
+            android:textSize="@dimen/_30sdp"
+            android:layout_marginTop="@dimen/_30sdp"
+            app:layout_constraintTop_toTopOf="@+id/layoutHeader"
+            app:layout_constraintStart_toStartOf="@+id/layoutHeader"
+            app:layout_constraintEnd_toEndOf="@+id/layoutHeader" />
+
+        <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/textTitle"
             android:layout_weight="1"
+            android:gravity="center"
             android:fontFamily="@font/ubuntu_bold"
             android:includeFontPadding="false"
             android:textColor="@color/colorTextIcon"
-            android:textSize="@dimen/_15sdp" />
+            android:textSize="@dimen/_15sdp"
+            app:layout_constraintTop_toBottomOf="@+id/textAvt"
+            app:layout_constraintStart_toStartOf="@+id/layoutHeader"
+            app:layout_constraintEnd_toEndOf="@+id/layoutHeader"
+            android:layout_marginTop="@dimen/_10sdp"/>
 
         <TextView
             android:id="@+id/textSignOut"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:fontFamily="@font/ubuntu_bold"
             android:gravity="center"
-            android:text="@string/sign_out"
+            android:text="@string/welcome_to"
             android:textColor="@color/colorBackground"
-            android:textSize="@dimen/_13sdp" />
+            android:textSize="@dimen/_13sdp"
+            tools:layout_editor_absoluteX="160dp"
+            tools:layout_editor_absoluteY="0dp" 
+            app:layout_constraintTop_toTopOf="@id/layoutHeader"
+            app:layout_constraintStart_toStartOf="@id/layoutHeader"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginStart="@dimen/_12sdp"/>
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraint_menu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
+        app:layout_constraintBottom_toBottomOf="@id/layoutHeader"
+        android:layout_marginHorizontal="@dimen/_20sdp"
+        android:background="@drawable/white_button_background">
+        <LinearLayout
+            android:id="@+id/linear_profile"
+            android:layout_margin="@dimen/_5sdp"
+            app:layout_constraintStart_toStartOf="@id/constraint_menu"
+            app:layout_constraintBottom_toBottomOf="@id/constraint_menu"
+            app:layout_constraintTop_toTopOf="@+id/constraint_menu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:background="@drawable/purple_top_button_background">
+            <ImageView
+                android:layout_margin="@dimen/_5sdp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/ic_profile"/>
+            <TextView
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Profile"
+                android:textSize="@dimen/_10sdp"
+                android:textColor="@color/purple_700"
+                android:fontFamily="@font/ubuntu_bold"
+                android:includeFontPadding="false"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:gravity="center"
+            android:layout_margin="@dimen/_5sdp"
+            app:layout_constraintEnd_toEndOf="@id/constraint_menu"
+            app:layout_constraintStart_toStartOf="@id/constraint_menu"
+            app:layout_constraintBottom_toBottomOf="@id/constraint_menu"
+            app:layout_constraintTop_toTopOf="@+id/constraint_menu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/purple_top_button_background">
+            <ImageView
+                android:layout_margin="@dimen/_5sdp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/ic_profile"/>
+            <TextView
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Profile"
+                android:textSize="@dimen/_10sdp"
+                android:textColor="@color/purple_700"
+                android:fontFamily="@font/ubuntu_bold"
+                android:includeFontPadding="false"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/linear_signout"
+            android:gravity="center"
+            android:layout_margin="@dimen/_5sdp"
+            app:layout_constraintEnd_toEndOf="@id/constraint_menu"
+            app:layout_constraintBottom_toBottomOf="@id/constraint_menu"
+            app:layout_constraintTop_toTopOf="@+id/constraint_menu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/purple_top_button_background">
+            <ImageView
+                android:layout_margin="@dimen/_5sdp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/ic_signout"/>
+            <TextView
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/sign_out"
+                android:textSize="@dimen/_10sdp"
+                android:textColor="@color/purple_700"
+                android:fontFamily="@font/ubuntu_bold"
+                android:includeFontPadding="false"/>
+        </LinearLayout>
+
+        
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+<EditText
+    android:layout_marginTop="@dimen/_12sdp"
+    android:paddingStart="@dimen/_8sdp"
+    android:paddingEnd="@dimen/_4sdp"
+    android:id="@+id/edittext_search"
+    app:layout_constraintTop_toBottomOf="@id/constraint_menu"
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
+    android:background="@drawable/background_edit_text"
+    android:hint="Search for..."
+    android:layout_marginHorizontal="@dimen/_20sdp"
+    android:drawableEnd="@drawable/ic_search"/>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:layout_marginTop="@dimen/_8sdp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/swipeRefreshLayout"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/layoutHeader">
+        app:layout_constraintTop_toBottomOf="@+id/edittext_search">
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
@@ -54,8 +189,7 @@
             android:padding="@dimen/_5sdp"
             android:clipToPadding="false"
             android:orientation="vertical"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            />
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
