--- a/app/src/main/res/layout/item_container_user.xml
+++ b/app/src/main/res/layout/item_container_user.xml
@@ -86,6 +86,7 @@
         />
 
     <TextView
+        android:gravity="right"
         android:id="@+id/textEmail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
